[project]
name = "lem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ljw", email = "ljw2017@sjtu.edu.cn" }
]
requires-python = "~=3.14.2"
dependencies = [
    "cooltools>=0.7.1",
    "fresnel>=0.1.1",
    "genomepy>=0.16.4",
    "gsd>=5.0.1",
    "plotnine>=0.15.7",
    "pysam>=0.24.0",
    "rowan>=1.3.2",
]

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"
